--- a/login.css
+++ b/login.css
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url(img1..jpg) repeat;
+    background: url(img1..jpg) no-repeat;
     background-size: cover;
     background-position: center;
   }
